[fix] response 타입 수정